Update starting state

--- a/src/app/components/theme/theme.component.html
+++ b/src/app/components/theme/theme.component.html
@@ -15,12 +15,8 @@
           
       </mat-form-field>
     </div>
-    <div class="themeName">
-      <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Button Color</mat-label>
-          <input matInput formControlName="buttonColor" placeholder="Eg. #FFFFFF">
-          
-      </mat-form-field>
+    <div class="themeButton">
+      <!-- Insert Button here -->
     </div>
     <div class="themeHtmlPreview">
       <h2>{{ themeTitle }}</h2>
